# Person-Recognition

./: .gitignore  CMakeLists.txt  README.md  TEST_GUIDE.md  package.xml  setup.py
scripts/: open_vision_node.py
src/cade_vision/: analyzer.py  cloth.py  posture_gesture.py  tracker.py
