<?xml version="1.0"?>
<package format="2">
  <name>cade_vision</name>
  <version>0.1.0</version>
  <description>CADE Vision - Pure feature extractor with YOLO-World and 3D coordinate output</description>
  <maintainer email="huyanshen@example.com">huyanshen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
